# volga-it

./: .gitignore  README.md  docker-compose.yaml  init.sql  setup_kibana.sh
account/: .dockerignore  .env  .env.example  Dockerfile  alembic.ini  pyproject.toml
account/certificates/: private_key.pem  public_key.pem
account/src/: __init__.py  base_dao.py  config.py  dependencies.py  main.py  responses.py
account/src/accounts/: dao.py  models.py  router.py  schemas.py  service.py
account/src/alembic/: env.py
account/src/alembic/versions/: 2024_09_29_1102-2dde51662196_seeder_table_users.py  2024_09_29_1718-fb421d6f9b2a_refreshsessiontable1.py
account/src/authentication/: dao.py  models.py  router.py  schemas.py  service.py  utils.py
account/src/doctors/: router.py  service.py
account/src/exceptions/: AuthExceptions.py  DatabaseException.py
account/src/rabbitMq/: __init__.py  server.py  timetable.py
account/tests/: test_accounts.py  test_auth.py  test_doctors.py
account/tests/locust/: locustfile.py
account/tests/pytest/: conftest.py  test_accounts.py  test_auth.py  test_doctors.py
auth/: .env  Dockerfile  README.md  pyproject.toml
auth/src/: config.py  database.py  dependencies.py  main.py
auth/src/alembic/: env.py
auth/src/daos/: RefreshSessionDAO.py  (+2 more)
document/: .env  .env.example  Dockerfile  pyproject.toml
document/src/: __init__.py  base_model.py  config.py  database.py  dependencies.py  main.py  responses.py
document/src/alembic/: env.py
document/src/alembic/versions/: 3dfed02e2655_create_table_history.py
document/src/history/: dao.py  models.py  router.py  schemas.py  service.py
document/src/rabbitMq/: __init__.py  doctor.py  hospital.py  pacient.py  token.py
document/tests/: conftest.py  test_history.py
hospital/: .dockerignore  .env  Dockerfile  README.md  pyproject.toml
hospital/src/: __init__.py  base_dao.py  config.py  dependencies.py  main.py  responses.py
hospital/src/alembic/: env.py
hospital/src/alembic/versions/: 2024_10_01_1357-3fed2be1ce66_create_hospitals_rooms_tables.py  2024_10_25_1903-b11a57689553_asd.py
hospital/src/hospitals/: dao.py  models.py  router.py  schemas.py  service.py
hospital/src/rabbitMq/: __init__.py  server.py  timetable.py  token.py
hospital/tests/: conftest.py  test_hospitals.py
hospitals/: .env  Dockerfile  alembic.ini  pyproject.toml
hospitals/src/: config.py  database.py  dependencies.py  main.py
hospitals/src/alembic/: env.py
hospitals/src/alembic/versions/: 2024_10_01_1357-3fed2be1ce66_create_hospitals_rooms_tables.py
hospitals/src/daos/: HospitalsDAO.py  __init__.py
hospitals/src/models/: HospitalModel.py  HospitalMtmRoom.py  RoomModel.py
hospitals/src/rabbitMq/: __init__.py  server.py
hospitals/src/routers/: HospitalsRouter.py  __init__.py
hospitals/src/schemas/: HospitalsSchemas.py  RoomsSchemas.py
hospitals/src/services/: HospitalService.py
timetable/: .env  Dockerfile  README.md  pyproject.toml
timetable/src/: __init__.py  base_dao.py  base_model.py  config.py  database.py  dependencies.py  main.py  responses.py
timetable/src/alembic/: env.py
timetable/src/alembic/versions/: 2024_10_04_1351-4cf8c60853fe_create_table_timetable.py  2024_10_10_2212-b7cc58fb0e56_create_table_appointment.py  2024_10_10_2254-fc5cb5360715_create_table_appointment.py  2024_10_14_1843-bb17d48b59a2_add_delete_cascade.py  2024_10_14_1933-1c17d94ead05_add_column_user_id_in_appointments.py
timetable/src/appointment/: dao.py  model.py  router.py  schemas.py  service.py
timetable/src/daos/: __init__.py  appointments.py  timetable.py
timetable/src/exceptions/: database.py
timetable/src/models/: appointments.py  timetable.py
timetable/src/rabbitMq/: __init__.py  doctor.py  hospital.py  server.py  token.py
timetable/src/routers/: __init__.py  appointment.py  timetable.py
timetable/src/schemas/: appointments.py  timetable.py
timetable/src/services/: appointments.py  timetable.py
timetable/src/timetable/: dao.py  model.py  router.py  schemas.py  service.py
timetable/tests/: conftest.py  test_timetable.py
(+21 files in other folders)
