[tool.poetry]
name = "document"
version = "0.1.0"
description = ""
authors = ["ligets <legen2a208@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
asyncpg = "^0.29.0"
pyjwt = "^2.9.0"
pydantic = "^2.9.2"
datetime = "^5.5"
pydantic-settings = "^2.5.2"
aio-pika = "^9.4.3"
alembic = "^1.13.3"
elasticsearch = "^8.15.1"
aiohttp = "^3.10.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
